# hera-example-project

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml  release.yaml
hera_example_project/: __main__.py  output_yaml.py  util.py  workflow.py  workflow_template.py
hera_scratch/: __main__.py  output_yaml.py  util.py  workflow_template.py
manifests/: workflow.yaml  workflow_template.yaml
